RESOLVED FIXED270194
[ macOS ] fast/speechrecognition/start-recognition-after-denied-gum.html is a flaky Timeout
https://bugs.webkit.org/show_bug.cgi?id=270194
Summary [ macOS ] fast/speechrecognition/start-recognition-after-denied-gum.html is a...
Robert Jenner
Reported 2024-02-27 14:36:49 PST
fast/speechrecognition/start-recognition-after-denied-gum.html is a flaky timeout on macOS Monterey and later. HISTORY: https://results.webkit.org/?suite=layout-tests&test=fast%2Fspeechrecognition%2Fstart-recognition-after-denied-gum.html Scrolling back in history I see the first time this occurred was at 269821@main. That probably isn't the regression point given the talkiness of this timeout, but it highlights that it regressed at some point, and that it happened a bit ago. Uncovering the regression point will largely depend on reproducibility.
Attachments
Radar WebKit Bug Importer
Comment 1 2024-02-27 15:42:20 PST
Robert Jenner
Comment 2 2024-02-27 16:17:58 PST
I was able to reproduce this timeout at Sonoma Debug ToT running the test as follows: run-webkit-tests fast/speechrecognition/start-recognition-after-denied-gum.html --iterations 100 In 100 iterations it timed-out 14 times. Also, this has been going on for a very long time. I was able to reproduce the timeout at more than 1000 commits before the first reported timeout at 269821@main. There is already a test expectation set for this test.
EWS
Comment 3 2024-03-12 02:33:13 PDT
Committed 275969@main (ad13d163120d): <https://commits.webkit.org/275969@main> Reviewed commits have been landed. Closing PR #25701 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.