[ macOS ] fast/speechrecognition/start-recognition-after-denied-gum.html is a flaky Timeout rdar://123722096 https://bugs.webkit.org/show_bug.cgi?id=270194

Reviewed by Eric Carlson.

Make sure to not GC SpeechRecognition if it can fire events and has event listeners.

* LayoutTests/platform/mac-wk2/TestExpectations:
* Source/WebCore/Modules/speech/SpeechRecognition.cpp:
(WebCore::SpeechRecognition::virtualHasPendingActivity const):
* Source/WebCore/Modules/speech/SpeechRecognition.h:

Canonical link: https://commits.webkit.org/275969@main